--- a/README
+++ b/README
@@ -46,7 +46,7 @@ to the main font.
  f.load_variant("savorg__.afm")
  fc = f.load_variant("savorg__.afm")
  f.fake_caps(fc,0.8)
- f.copy(fc,:lowercase,:ligkern)
+ f.copy(fc,:lowercase,:ligkern=>true)
  f.defaultfm.chars.apply_ligkern_instructions(RFI::STDLIGKERN)
  f.write_files
 
@@ -54,16 +54,9 @@ to the main font.
 
 == Creating the documentation
 
-You can generate the documentation of the classes and methods by
-running Rdoc like this:
-
- rdoc --title "Ruby Font Installer Library" README lib/*rb 
-
-This creates a directory +doc+ and a lot of html files. Open
-<tt>doc/index.html</tt> in your browser and voila, all classes and methods
-documented. 
-
-There is a +Makefile+ that takes care of generating the documentation.
+Run <tt>make</tt> in order to create the documentation in the
+subdirectory <tt>doc/</tt>. Open <tt>doc/index.html</tt> in your
+browser and voila, see all classes and methods documented.
 
 ---
 ==Other Stuff
