--- a/README
+++ b/README
@@ -12,8 +12,8 @@ these.
 == Roadmap
 
 Accessing Encodings:: See the ENC class to read and write <tt>.enc</tt>-files.
-Accessing Property Lists:: Use the  PL class to read and write (virtual) property lists 
-Reading a font metric:: See the FontMetric class and the subclass AFM to access the font files
+Accessing Property Lists:: Use the PL class to read and write (virtual) property lists.
+Accessing font metrics:: See the FontMetric class and the subclass AFM to read and write the font metric files.
 Installing a font(set):: See below for examples.
 
 == Example programs
@@ -22,7 +22,7 @@ You might find the examples shipped with RFIL useful.
 
 afm2tfm.rb:: Install a single font. As with afm2tfm (the program shipped with dvips), you can reencode a font and fake caps.
 afminfo:: Give information about an afm file (metrics, glyph information).
-pldiff:: Compare two metric files and outputs all differences.
+pldiff:: Compare two metric files and output all differences.
 plinfo:: Show information about a TeX metric file.
 rfont:: Simple installer that handles a family of fonts (reguar, italic, bold...)
 
