--- a/examples/README
+++ b/examples/README
@@ -1,2 +1,8 @@
 This directory contains example programs that use the font install
 libraries
+
+--------------------------------------------------
+to create rfii.y needed for rfii run 
+
+racc rfii.y
+--------------------------------------------------
