changed library structure/namespace

--- a/README
+++ b/README
@@ -61,7 +61,7 @@ browser and voila, see all classes and methods documented.
 
 ==Other Stuff
 
-Author:: Patrick Gundlach <patrickg@despammed.com>
+Author:: Patrick Gundlach <patrick@gundla.ch>
 Project Page::  https://foundry.supelec.fr/projects/rfil
 Homepage:: (Documentation) https://rfil.groups.foundry.supelec.fr
 License::  Copyright (c) 2005 Patrick Gundlach.
